knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/pqcrush__White_Space_Template__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Template</label>
    <nameField>
        <label>Cross-Sell Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross-Sell Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>