knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__Column_Label_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Column_Label_Field_Name__c</fullName>
    <label>Column Label Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>