knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__ColumnMapping__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ColumnMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object to dynamically create columns</description>
    <label>Column Mapping</label>
    <referenceTo>pqcrush__Mapping__c</referenceTo>
    <relationshipLabel>White Space Templates (Column Mapping)</relationshipLabel>
    <relationshipName>White_Space_Templates_Column</relationshipName>
    <type>Lookup</type>
</CustomField>