knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__hasDependentPicklistRows__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__hasDependentPicklistRows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Row values are generated based on possible picklist values from the records mapped to cell data and the picklist field&apos;s controlling field.</description>
    <label>Has Dependent Picklist Rows</label>
    <type>Checkbox</type>
</CustomField>