knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__isLegacy__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__isLegacy__c</fullName>
    <formula>AND(ISBLANK(pqcrush__ColumnMapping__c),ISBLANK(pqcrush__RowMapping__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLegacy</label>
    <type>Checkbox</type>
</CustomField>