knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__Row_Label_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Row_Label_Field_Name__c</fullName>
    <label>Row Label Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>