knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Template__c/fields/pqcrush__RowMapping__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__RowMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object to dynamically create rows</description>
    <label>Row Mapping</label>
    <referenceTo>pqcrush__Mapping__c</referenceTo>
    <relationshipLabel>White Space Templates (Row Mapping)</relationshipLabel>
    <relationshipName>White_Space_Templates_Row</relationshipName>
    <type>Lookup</type>
</CustomField>